--- a/CSS/ICOMOON.CSS
+++ b/CSS/ICOMOON.CSS
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?eylvc8');
-  src:  url('../fonts/icomoon.eot?eylvc8#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?eylvc8') format('truetype'),
-    url('../fonts/icomoon.woff?eylvc8') format('woff'),
-    url('../fonts/icomoon.svg?eylvc8#icomoon') format('svg');
+  src:  url('Ilya-Nahorny.github.io/FONTS/ICOMOON.EOT?eylvc8');
+  src:  url('Ilya-Nahorny.github.io/FONTS/ICOMOON.EOT?eylvc8#iefix') format('embedded-opentype'),
+    url('Ilya-Nahorny.github.io/FONTS/ICOMOON.TTF?eylvc8') format('truetype'),
+    url('Ilya-Nahorny.github.io/FONTS/icomoon.woff?eylvc8') format('woff'),
+    url('Ilya-Nahorny.github.io/FONTS/ICOMOON.SVG?eylvc8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
