--- a/CSS/ICOMOON.CSS
+++ b/CSS/ICOMOON.CSS
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('Ilya-Nahorny.github.io/FONTS/ICOMOON.EOT?eylvc8');
+  src:  url('Ilya-Nahorny.github.io/FONTS/ICOMOON.EOT');
   src:  url('Ilya-Nahorny.github.io/FONTS/ICOMOON.EOT?eylvc8#iefix') format('embedded-opentype'),
     url('Ilya-Nahorny.github.io/FONTS/ICOMOON.TTF?eylvc8') format('truetype'),
     url('Ilya-Nahorny.github.io/FONTS/icomoon.woff?eylvc8') format('woff'),
