--- a/CSS/STYLE.CSS
+++ b/CSS/STYLE.CSS
@@ -25,7 +25,7 @@ a{
     height: 100vh;
     align-items: center;
     min-height: 600px;
-    background:url(../img/FIT7.JPG) no-repeat center;
+    background:url(../IMG/FIT7.JPG) no-repeat center;
     background-size: cover; 
     position: relative;
 }
