--- a/JS/SLICK/slick-theme.css
+++ b/JS/SLICK/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: #fff url('ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
@@ -12,8 +12,8 @@
     font-weight: normal;
     font-style: normal;
 
-    src: url('./FONTS/SLICK.EOT');
-    src: url('./FONTS/SLICK.EOT?#iefix') format('embedded-opentype'), url('./FONTS/slick.woff') format('woff'), url('./FONTS/SLICK.TTF') format('truetype'), url('./FONTS/SLICK.SVG#slick') format('svg');
+    src: url('FONTS/SLICK.EOT');
+    src: url('FONTS/SLICK.EOT?#iefix') format('embedded-opentype'), url('FONTS/slick.woff') format('woff'), url('FONTS/SLICK.TTF') format('truetype'), url('FONTS/SLICK.SVG#slick') format('svg');
 }
 /* Arrows */
 .slick-prev,
