--- a/JS/SLICK/slick-theme.css
+++ b/JS/SLICK/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('ajax-loader.gif') center center no-repeat;
+    background: #fff url('Ilya-Nahorny.github.io/JS/SLICK/ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
